--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
   background-color: var(--clr-primary);
   color: var(--clr-white);
   border: none;
-  padding: 0.75rem 1rem;
+  padding: 0.375rem 0.75rem;
   margin: 0.75rem 1rem;
   letter-spacing: var(--letter-spacing);
   font-weight: 700;
@@ -213,6 +213,8 @@ p {
   }
 }
 /* ---------------------About--------------------- */
+.about-section {
+}
 .about {
   display: flex;
   flex-wrap: wrap;
@@ -247,4 +249,59 @@ p {
     text-align: left;
   }
 }
-/* ---------------------About--------------------- */
+/* ---------------------Products--------------------- */
+.products-section {
+  background: var(--clr-grey-10);
+}
+.products {
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  align-items: center;
+}
+.products article {
+  padding: 2rem 0;
+}
+.products-info {
+  text-align: center;
+  /* flex-basis: 20%; */
+}
+
+.product-text {
+  color: var(--clr-grey-5);
+  max-width: 26rem;
+}
+.products-inventory {
+  display: flex;
+  flex-wrap: wrap;
+  /* align-items: center; */
+  justify-content: center;
+  gap: 1rem;
+}
+@media screen and (min-width: 992px) {
+  .products {
+    flex-direction: row;
+    /* justify-content: space-between; */
+    gap: 1.5rem;
+  }
+  .products-inventory {
+    flex-wrap: nowrap;
+  }
+}
+.product {
+  margin-bottom: 2rem;
+}
+.product-img-container {
+  width: 15rem;
+  height: 15rem;
+  margin-bottom: 2rem;
+  border-radius: var(--radius);
+}
+.product-img-container img {
+  border-radius: var(--radius);
+}
+.product-title {
+}
+.product-price {
+  color: var(--clr-primary);
+}
