--- a/style.css
+++ b/style.css
@@ -305,3 +305,74 @@ p {
 .product-price {
   color: var(--clr-primary);
 }
+/* ---------------------Services--------------------- */
+.services-section {
+}
+.services-title {
+  margin-top: 4rem;
+  margin-bottom: -4rem;
+  text-align: center;
+}
+.services {
+}
+.service-card {
+  width: 30rem;
+  margin: 2rem auto;
+  border-radius: var(--radius);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  transition: var(--transition);
+}
+.service-card:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  transform: scale(1.02);
+}
+.service-card-img-container {
+  width: 100%;
+  height: 17rem;
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+  /* position relative for the icon */
+  position: relative;
+}
+.service-card-img-container img {
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
+}
+.service-icon {
+  font-size: 2rem;
+  color: var(--clr-primary);
+  background-color: var(--clr-primary-light);
+  padding: 0.25rem 0.6rem;
+  border: 5px solid var(--clr-grey-10);
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.service-card-info {
+  background-color: var(--clr-grey-10);
+  text-align: center;
+  padding: 3rem 1rem 2.5rem 1rem;
+}
+.service-card-info p {
+  max-width: 20rem;
+  margin: 0 auto;
+  color: var(--clr-grey-5);
+}
+.service-btn {
+  font-size: 0.7rem;
+  text-transform: capitalize;
+  padding: 0.375rem 0.5rem;
+  border-radius: var(--radius);
+  font-weight: 400;
+  margin-top: 1.25rem;
+}
+@media screen and (min-width: 992px) {
+  .services {
+    display: flex;
+    gap: 2rem;
+  }
+  .service-card {
+    flex-basis: 33.3%;
+  }
+}
