--- a/style.css
+++ b/style.css
@@ -132,6 +132,19 @@ p {
     line-height: 1;
   }
 }
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  border: none;
+  background: none;
+  outline: none;
+}
+fieldset {
+  border: none;
+}
 /* ---------------------Header--------------------- */
 .header {
   min-height: 100vh;
@@ -375,4 +388,88 @@ p {
   .service-card {
     flex-basis: 33.3%;
   }
+}
+/* ---------------------Contact--------------------- */
+
+.contact-section {
+  background-color: var(--clr-grey-10);
+}
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 992px) {
+  .contact {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 1rem;
+  }
+}
+.contact-info,
+.contact-form {
+  margin: 1rem 0;
+}
+.contact-info-container {
+}
+.contact-info {
+}
+.contact-item {
+  margin-bottom: 1.75rem;
+}
+.contact-title {
+  color: var(--clr-primary);
+}
+.contact-icon {
+}
+.contact-text {
+  text-transform: uppercase;
+}
+.contact-form {
+  width: 35rem;
+  background: var(--clr-white);
+  border-radius: var(--radius);
+  text-align: center;
+  padding: 1rem;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  transition: var(--transition);
+}
+.contact-form:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+.contact-form h3 {
+  color: var(--clr-grey-5);
+  padding-top: 1.25rem;
+}
+.form-group {
+  padding: 1rem 1.5rem;
+  /* display: flex;
+  flex-direction: column;
+  gap: 1rem; */
+}
+.form-control {
+  width: 100%;
+  display: block;
+  padding: 0.75rem 1rem;
+  margin-bottom: 1.25rem;
+  background-color: var(--clr-grey-10);
+  border-radius: var(--radius);
+  text-transform: uppercase;
+  letter-spacing: var(--letter-spacing);
+}
+textarea {
+  resize: none;
+  min-width: 100%;
+  /* min-width: 100%;
+  max-width: 100%;
+  min-height: 10rem;
+  max-height: 10rem; */
+}
+.submit-btn {
+  display: block;
+  width: 100%;
+  margin: 0;
+  padding: 1rem;
+  border-bottom-left-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
 }
