--- a/style.css
+++ b/style.css
@@ -473,3 +473,31 @@ textarea {
   border-bottom-left-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
 }
+/* ---------------------Footer--------------------- */
+.footer {
+  background-color: var(--clr-grey-1);
+  text-align: center;
+}
+.social-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 1.25rem;
+}
+.social-icon {
+  font-size: 1.5rem;
+  color: var(--clr-white);
+  transition: var(--transition);
+}
+.social-icon:hover {
+  color: var(--clr-primary);
+}
+.footer-text {
+  color: var(--clr-white);
+  text-transform: uppercase;
+  font-weight: 400;
+}
+.footer-text span:nth-child(2) {
+  color: var(--clr-primary);
+}
